--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,40 @@
-altair
-numpy
-pandas
-pydeck
-streamlit
+annotated-types==0.6.0
+anyio==4.2.0
+audioread==3.0.1
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
+decorator==4.4.2
+exceptiongroup==1.2.0
+idna==3.6
+imageio==2.33.1
+imageio-ffmpeg==0.4.9
+joblib==1.3.2
+lazy-loader==0.3
+librosa==0.10.1
+llvmlite==0.41.1
+mangum==0.17.0
+moviepy==1.0.3
+msgpack==1.0.7
+numba==0.58.1
+numpy==1.26.3
+packaging==23.2
+Pillow==9.5.0
+platformdirs==4.1.0
+pooch==1.8.0
+proglog==0.1.10
+pycparser==2.21
+pydantic==2.5.3
+pydantic-core==2.14.6
+requests==2.31.0
+scikit-learn==1.3.2
+scipy==1.11.4
+sniffio==1.3.0
+soundfile==0.12.1
+soxr==0.3.7
+starlette==0.32.0.post1
+threadpoolctl==3.2.0
+tqdm==4.66.1
+typing-extensions==4.9.0
+urllib3==2.1.0
+python-multipart
